--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
+    "axios": "^1.13.2",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
