--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "eslint"
+    "lint": "eslint",
+    "mock": "json-server --watch db.json --port 3001"
   },
   "dependencies": {
     "@tanstack/react-query": "^5.90.12",
@@ -23,6 +24,7 @@
     "babel-plugin-react-compiler": "1.0.0",
     "eslint": "^9",
     "eslint-config-next": "16.0.10",
+    "json-server": "^1.0.0-beta.3",
     "prettier": "^3.7.4",
     "tailwindcss": "^4",
     "typescript": "^5"
