--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
     "axios": "^1.13.2",
     "next": "16.0.10",
     "react": "19.2.1",
-    "react-dom": "19.2.1"
+    "react-dom": "19.2.1",
+    "react-router-dom": "^7.11.0"
   },
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
